GatewayAPI/v1.4.1/traefik-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: gateway-api
  labels:
    app: traefik

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: traefik

  template:
    metadata:
      labels:
        app: traefik

    spec:
      serviceAccountName:  traefik-gateway-controller

      containers:
        - name: traefik
          image: shixiaochuangk8s/traefik:v3.6
          imagePullPolicy: IfNotPresent

          args:
            - --configfile=/config/traefik.yaml

          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"

          volumeMounts:
            - name: config
              mountPath: /config

      volumes:
        - name: config
          configMap:
            name: traefik-cfg

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: traefik
                topologyKey: kubernetes.io/hostname
