GatewayAPI/v1.4.1/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: gateway-api
  annotations:
    lb.kubesphere.io/v1alpha1: openelb
    protocol.openelb.kubesphere.io/v1alpha1: layer2
    eip.openelb.kubesphere.io/v1alpha2: eip-pool
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web

    - name: websecure
      protocol: TCP
      port: 443
      targetPort: websecure
