GatewayAPI/v1.4.1/traefik-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: gateway-api
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - "traefikui.shixiaochuang.org"
  rules:
    - backendRefs:
        - name: api@internal
          kind: TraefikService
          group: traefik.io
          namespace: gateway-api
